--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
  "name": "PassLok Universal",
  "short_name": "PassLok",
  "description": "High security encryption for any email, plus Passwords.",
- "version": "0.5.2.1",
+ "version": "0.5.5",
  "manifest_version": 2,
  "icons": {
  "16": "img/passlok-icon16inv.png",
@@ -11,12 +11,10 @@
  },
  "content_security_policy": "default-src 'self'; img-src 'self' data:; connect-src 'self' data:; frame-src 'self' https://* http://*; style-src 'self' 'unsafe-inline'",
 "permissions":[
-	"storage",
-    "activeTab",
+	"storage", "activeTab",
 	"webRequest",
 	"webRequestBlocking",
-	"contextMenus", "history",
-	"<all_urls>"
+	"contextMenus", "history"
     ],
 "background":{
 	"scripts": [
@@ -32,16 +30,5 @@
         },
         "default_title": "PassLok Universal",
         "default_popup": "html/popup.html"
-  },
-"content_scripts": [{
-	"matches": [
-        "<all_urls>"
-    ],
-    "js": [
-		"js-src/content.js"
-	],
-    "run_at":"document_idle",
-    "all_frames":true,
-	"match_about_blank": true
-  }]
+  }
 }
