--- a/manifest.firefox.json
+++ b/manifest.firefox.json
@@ -2,7 +2,7 @@
   "name": "PassLok Universal",
   "short_name": "PassLok",
   "description": "High security encryption for any email, plus Passwords.",
-  "version": "0.5.10",
+  "version": "1.0",
   "manifest_version": 3,
   "icons": {
   "16": "img/passlok-icon16inv.png",
@@ -18,7 +18,7 @@
     "contextMenus", "history"
   ],
   "background":{
-    "scripts": ["background.js"]
+    "service_worker": "background.js"
     },
   "action": {
     "default_icon": {
